# djamplate

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  example.env  pyproject.toml  setup.cfg
.github/workflows/: django.yml
config/: settings.py  urls.py
templates/: base.html
templates/pages/: index.html
